talaka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talaka-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - talaka.it
      secretName: talaka-tls
  rules:
    - host: talaka.it
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: talaka-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: talaka-frontend-service
                port:
                  number: 80
